@@ -6,6 +6,8 @@ import com.supercoding.hrms.attendance.dto.request.read.ReadWorkhoursRequestDto;
 import com.supercoding.hrms.attendance.dto.response.WorkhourResponseDto;
 import com.supercoding.hrms.attendance.service.WorkhourService;
 import com.supercoding.hrms.emp.dto.response.EmployeeDetailResponseDto;
+import com.supercoding.hrms.emp.entity.Employee;
+import com.supercoding.hrms.emp.repository.EmployeeRepository;
 import com.supercoding.hrms.emp.service.EmpService;
 import com.supercoding.hrms.pay.domain.*;
 import com.supercoding.hrms.pay.dto.PayrollType;
@@ -42,6 +44,7 @@ public class PayrollService {
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     private final WorkhourService workhourService;
+    private final EmployeeRepository employeeRepository;
 
     /**
      * resources/payroll-data.json 파일을 읽어서 DB에 저장
@@ -143,22 +146,39 @@ public class PayrollService {
 
     //R(L) (다건 조회)
     //[관리자용] 전체 급여 목록 조회
-    public List<PayrollType> getPayrolls(String payMonth, String dept, String status) {
+    public List<PayrollType> getPayrolls(String payMonth, String deptId, String status, String gradeId, String empNm) {
+
+        List<Employee> employeeList = employeeRepository.findAll();
+
+        if(!deptId.isEmpty()){
+            employeeList = filterByDept(deptId, employeeList);
+        }
+
+        if(!gradeId.isEmpty()){
+            employeeList = filterByGrade(gradeId, employeeList);
+        }
+
+        if(!empNm.isEmpty()){
+            employeeList = filterByName(empNm, employeeList);
+        }
+
         // substring(0,6) = YYYYMM
         List<Payroll> payrolls = payrollRepository.findAll().stream().filter(item -> item.getPayDate().substring(0,6).equals(payMonth)).toList();
 
-        if(!dept.isEmpty()){
-            payrolls = payrolls.stream().filter(item -> empService.getEmployeeByAdmin(item.getEmpId()).getDeptId().equals(dept)).toList();
+        if(!employeeList.isEmpty()){
+            // 모든 필터링 거쳐서 검색된것
+            List<Long> empIds = employeeList.stream().map(Employee::getEmpId).toList();
+            payrolls = payrolls.stream().filter(item -> empIds.contains(item.getEmpId())).toList(); //payrolls에서 filter를 걸어서 empIds 안에서 payrolls의 empId와 같은(교집합) 애들을 필터링 함.
         }
 
         if(!status.isEmpty()){
             payrolls = payrolls.stream().filter(item -> item.getStatus().equals(status)).toList();
         }
 
-        return payrolls.stream().map(this::setPayrollType).collect(Collectors.toList());
+        return payrolls.stream().map(item -> setPayrollType(item)).toList();
     }
 
-    // 단건과 다건 조회에서 중복으로 쓰여서 분리
+    // 단건과 다건 조회에서 둘다 쓰이니까 중복으로 쓰여서 분리해서 따로 작성함
     public PayrollType setPayrollType(Payroll payroll){
 
         PayrollType payrollType = getEmpInfo(payroll.getEmpId());
@@ -220,6 +240,20 @@ public class PayrollService {
 
     }
 
+    //전체 사원 조회 받아서 부서별 필터링
+    public List<Employee> filterByDept(String deptId, List<Employee> employees){
+        return employees.stream().filter(item -> item.getDepartment().getDeptId().equals(deptId)).toList();
+    }
+
+    //전체 사원 조회 받아서 직급별 필터링
+    public List<Employee> filterByGrade(String gradeId, List<Employee> employees){
+        return employees.stream().filter(item -> item.getGrade().getGradeId().equals(gradeId)).toList();
+    }
+
+    //전체 사원 조회 받아서 이름별 필터링
+    public List<Employee> filterByName(String nameId, List<Employee> employees){
+        return employees.stream().filter(item -> item.getEmpNm().equals(nameId)).toList();
+    }
 
     public List<PayrollDetail> getDetails(Long empId){
         // 조회하고자하는 payroll의 사원id를 사용하여 items 불러오는거
